exports[`Typeahead items should render typeahead results with match 1`] = `
<div
  style={Object {}}>
  <div
    className={undefined}>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={true}
      aria-haspopup={true}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      className="form-control"
      id={undefined}
      onBlur={undefined}
      onChange={undefined}
      onKeyDown={undefined}
      placeholder={undefined}
      role="combobox"
      style={Object {}}
      type="text"
      value="le" />
  </div>
  <div
    id="react-autowhatever-my-search"
    style={Object {}}>
    <div
      style={Object {}}>
      <div
        style={Object {}}>
        <div
          className={undefined}>
          <i
            aria-hidden="true"
            className="fa fa-filter"
            title="icon" />
          <span
            className={undefined}>
            category 1
          </span>
        </div>
      </div>
      <ul
        role="listbox"
        style={Object {}}>
        <li
          id="react-autowhatever-my-search-section-0-item-0"
          onClick={undefined}
          role="option"
          style={Object {}}>
          <div
            className={undefined}>
            <span
              className={undefined}>
              <span>
                
                <em
                  className={undefined}>
                  le
                </em>
              </span>
              <span>
                 tit
                <em
                  className={undefined}>
                  le
                </em>
              </span>
              <span>
                 1
              </span>
            </span>
            <p
              className={undefined}>
              description: Uxoresque est in pacto est marito est hastam nomine in eos discessura incredibile tempus ardore.
            </p>
          </div>
        </li>
        <li
          id="react-autowhatever-my-search-section-0-item-1"
          onClick={undefined}
          role="option"
          style={Object {}}>
          <div
            className={undefined}>
            <span
              className={undefined}>
              <span>
                tit
                <em
                  className={undefined}>
                  le
                </em>
              </span>
              <span>
                 2 
                <em
                  className={undefined}>
                  le
                </em>
              </span>
              <span>
                s e
                <em
                  className={undefined}>
                  le
                </em>
              </span>
              <span>
                phants e
                <em
                  className={undefined}>
                  le
                </em>
              </span>
              <span>
                mentaires ont des ai
                <em
                  className={undefined}>
                  le
                </em>
              </span>
              <span>
                 
              </span>
            </span>
            <p
              className={undefined}>
              description: Aut aut cum satis inter Epicuri quidem cum erat inquam controversia autem mihi utrumque Attico.
            </p>
          </div>
        </li>
      </ul>
    </div>
    <div
      style={Object {}}>
      <div
        style={Object {}}>
        <div
          className={undefined}>
          <i
            aria-hidden="true"
            className="fa fa-asterisk"
            title="icon" />
          <span
            className={undefined}>
            category 2
          </span>
        </div>
      </div>
      <ul
        role="listbox"
        style={Object {}}>
        <li
          id="react-autowhatever-my-search-section-1-item-0"
          onClick={undefined}
          role="option"
          style={Object {}}>
          <div
            className={undefined}>
            <span
              className={undefined}>
              <span>
                tit
                <em
                  className={undefined}>
                  le
                </em>
              </span>
              <span>
                 3
              </span>
            </span>
            <p
              className={undefined}>
              description: In sanciatur libere audeamus exspectemus amicitia et dum ne audeamus causa monendum honesta studium valeat.
            </p>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Typeahead items should render typeahead with results 1`] = `
<div
  style={Object {}}>
  <div
    className={undefined}>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={true}
      aria-haspopup={true}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      className="form-control"
      id={undefined}
      onBlur={undefined}
      onChange={undefined}
      onKeyDown={undefined}
      placeholder={undefined}
      role="combobox"
      style={Object {}}
      type="text"
      value={undefined} />
  </div>
  <div
    id="react-autowhatever-my-search"
    style={Object {}}>
    <div
      style={Object {}}>
      <div
        style={Object {}}>
        <div
          className={undefined}>
          <i
            aria-hidden="true"
            className="fa fa-filter"
            title="icon" />
          <span
            className={undefined}>
            category 1
          </span>
        </div>
      </div>
      <ul
        role="listbox"
        style={Object {}}>
        <li
          id="react-autowhatever-my-search-section-0-item-0"
          onClick={undefined}
          role="option"
          style={Object {}}>
          <div
            className={undefined}>
            <span
              className={undefined}>
              <span>
                le title 1
              </span>
            </span>
            <p
              className={undefined}>
              description: Uxoresque est in pacto est marito est hastam nomine in eos discessura incredibile tempus ardore.
            </p>
          </div>
        </li>
        <li
          id="react-autowhatever-my-search-section-0-item-1"
          onClick={undefined}
          role="option"
          style={Object {}}>
          <div
            className={undefined}>
            <span
              className={undefined}>
              <span>
                title 2 les elephants elementaires ont des aile 
              </span>
            </span>
            <p
              className={undefined}>
              description: Aut aut cum satis inter Epicuri quidem cum erat inquam controversia autem mihi utrumque Attico.
            </p>
          </div>
        </li>
      </ul>
    </div>
    <div
      style={Object {}}>
      <div
        style={Object {}}>
        <div
          className={undefined}>
          <i
            aria-hidden="true"
            className="fa fa-asterisk"
            title="icon" />
          <span
            className={undefined}>
            category 2
          </span>
        </div>
      </div>
      <ul
        role="listbox"
        style={Object {}}>
        <li
          id="react-autowhatever-my-search-section-1-item-0"
          onClick={undefined}
          role="option"
          style={Object {}}>
          <div
            className={undefined}>
            <span
              className={undefined}>
              <span>
                title 3
              </span>
            </span>
            <p
              className={undefined}>
              description: In sanciatur libere audeamus exspectemus amicitia et dum ne audeamus causa monendum honesta studium valeat.
            </p>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Typeahead items should render typeahead without results 1`] = `
<div
  style={Object {}}>
  <div
    className={undefined}>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      className="form-control"
      id={undefined}
      onBlur={undefined}
      onChange={undefined}
      onKeyDown={undefined}
      placeholder={undefined}
      role="combobox"
      style={Object {}}
      type="text"
      value={undefined} />
  </div>
  <div
    id="react-autowhatever-my-search"
    style={Object {}} />
</div>
`;

exports[`Typeahead position should render search bar on the right 1`] = `
<div
  className="undefined">
  <div
    className={undefined}>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-expanded={false}
      aria-haspopup={false}
      aria-owns="react-autowhatever-my-search"
      autoComplete="off"
      className="form-control"
      id={undefined}
      onBlur={undefined}
      onChange={undefined}
      onKeyDown={undefined}
      placeholder={undefined}
      role="combobox"
      style={Object {}}
      type="text"
      value={undefined} />
  </div>
  <div
    id="react-autowhatever-my-search"
    style={Object {}} />
</div>
`;

exports[`Typeahead with toggle should render button 1`] = `
<button
  aria-describedby={42}
  className="btn btn-link"
  disabled={false}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
  role={null}
  type="button">
  <i
    aria-hidden="true"
    className="fa fa-search"
    title={null} />
</button>
`;
